deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hook
  labels:
    app: hook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hook
  template:
    metadata:
      labels:
        app: hook
    spec:
      containers:
      - name: hook
        image: hook.com/hook:1
        ports:
        - containerPort: 443
        command: ["/kac"]

---
apiVersion: v1
kind: Service
metadata:
  name: hook
spec:
  selector:
    app: hook
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "hook.test.com"
webhooks:
- name: "hook.test.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "hook"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyakNDQVpZQ0NRQ1dmZUZTOFFRWmZEQU5CZ2txaGtpRzl3MEJBUXNGQURBWk1Rc3dDUVlEVlFRR0V3SmoKZWpFS01BZ0dBMVVFQ0F3QmVEQWVGdzB5TURBNU1qVXhOekUyTWpsYUZ3MHlOVEE1TWpReE56RTJNamxhTUJreApDekFKQmdOVkJBWVRBbU42TVFvd0NBWURWUVFJREFGNE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBCk1JSUJDZ0tDQVFFQXlDS2dkcUZRdnE2d0ZqbEFiUjVhREtBS3h5Y1NQdnlMa2p3ZWc0YVhPV1h6UXJFRFZkR0gKSFNudGVScUhLZWtLcS9YakNqWkNzUHh6dmpLL00yUW55M0NyTUo3S3h2WUx2czdIWWkzR1hmQ09tS3VuZldsRgp4U3pPbG02R2hMYk [...]

  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
